--- a/src/demo/styles.css
+++ b/src/demo/styles.css
@@ -7,6 +7,7 @@ html {
   background-repeat: repeat;
   background-size: 30px 30px;
   background-color: #fbfbfb;
+  height: 100%;
 }
 #navigation {
   height: 71px;
@@ -246,7 +247,7 @@ html {
   padding-left: 20px;
   line-height: 40px;
   bottom: 0;
-  width: 362;
+  width: 362px;
   border: 1px solid #e8e8ef;
   height: 67px;
   box-sizing: border-box;
@@ -403,10 +404,10 @@ html {
   height: 100%;
   width: 311px;
   background-color: #fff;
-  right: -150;
+  right: -150px;
   opacity: 0;
   z-index: 2;
-  top: 0;
+  top: 0px;
   box-shadow: -4px 0px 40px rgba(26, 26, 73, 0);
   padding-left: 20px;
   transition: all 0.25s cubic-bezier(0.05, 0.03, 0.35, 1);
@@ -532,13 +533,13 @@ html {
   width: 100%;
   background-color: #e8e8ef;
   position: absolute;
-  right: 0;
+  right: 0px;
   bottom: 80;
 }
 #removeblock {
   border-radius: 5px;
   position: absolute;
-  bottom: 20;
+  bottom: 20px;
   font-family: Roboto;
   font-size: 14px;
   text-align: center;
@@ -560,7 +561,7 @@ html {
   -moz-user-select: none; /* Old versions of Firefox */
   -ms-user-select: none; /* Internet Explorer/Edge */
   user-select: none; /* Non-prefixed version, currently
-                                  supported by Chrome, Opera and Firefox */
+                                supported by Chrome, Opera and Firefox */
 }
 .blockyname {
   font-family: Roboto;
@@ -622,7 +623,6 @@ html {
   text-indent: 0px;
 }
 .block {
-  padding-top: 5px;
   background-color: #fff;
   margin-top: 0px !important;
   box-shadow: 0px 4px 30px rgba(22, 33, 74, 0.05);
